# birdfront

./: .gitignore  .pre-commit-config.yaml  Readme.md  docker-compose.yml
api/: Dockerfile  api.py  pyproject.toml
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.svelte  app.css  plots.js  store.js
worker/: Dockerfile  analyzer.py  convert_database.py  pyproject.toml  recorder.py  test_analyzer.py
